--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export(comb_eval)
 export(read_eval)
+importFrom(plyr,ddply)
 importFrom(plyr,rbind.fill)
-importFrom(reshape2,dcast)
+importFrom(reshape2,ddply)
