--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,7 @@ Authors@R: person("Hansjoerg", "Plieninger",
 Description: "InstEvaL" is an online system for course evaluations, which is used mainly at German universities (e.g., U Mannheim). The system (insteval.uni-mannheim.de) provides instructors with feedback for every course that is evaluated and with the accompanying raw data. The package instevalR uses the raw data of several course evaluations, combines them, and provides a handful of interesting plots.
 License: GPL-3
 LazyData: TRUE
+Imports: plyr,
+    reshape2,
+    scales,
+    Hmisc
