--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: An R Package For Summarizing And Plotting Several InstEvaL Course Evaluat
 Version: 0.0.0.9000
 Authors@R: person("Hansjoerg", "Plieninger", email = "plieninger@uni-mannheim.de",
                   role = c("aut", "cre"))
-Description: InstEvaL is an online system for course evaluations, which is used mainly at German universities (e.g., U Mannheim). The system (insteval.uni-mannheim.de) provides instructors with feedback for every course that is evaluated and with the accompanying raw data. The package instevalR uses the raw data of several course evaluations, combines them, and provides a handful of interesting plots.
+Description: InstEvaL is an online system for course evaluations, which is used mainly at German universities (e.g., U Mannheim). The system (http://insteval.uni-mannheim.de/) provides instructors with feedback for every course that is evaluated and with the accompanying raw data. The package instevalR uses the raw data of several course evaluations, combines them, and provides a handful of interesting plots.
 Depends: R (>= 3.2.0)
 License: GPL-3
 LazyData: true
