move 'readxl' from Suggests to Imports (so that it can be used on shinyapps.io)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,10 @@ Imports:
     dplyr,
     ggplot2,
     rlang,
-    magrittr
+    magrittr,
+    readxl
 RoxygenNote: 6.0.1
 Suggests: 
-    readxl,
     shiny,
     shinyAce,
     ggthemes,
